# openclaw-codex-account-panel

./: .gitignore  README.md  SHA256SUMS-v0.1.3.txt  SHA256SUMS-v0.1.4.txt
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: CHANGELOG.md
panel/: auth-store-sync.mjs  auth-store-sync.test.mjs  server.mjs
scripts/: openclaw_codex_add_profile.mjs
