[package]
name = "codex-account-panel-desktop"
version = "0.1.5"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
ureq = { version = "2", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
